Alignment Fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,6 +150,9 @@
 .team-section {
   text-align: center;
   padding: 50px 0;
+  display: flex;
+    flex-direction: column;
+    align-items: center;
   background: linear-gradient(-162deg, #540c54c4, transparent);
 }
 
